# claude-spt

./: .gitattributes  .gitignore  AGENTS.md  BUGS-v091.md  CHANGELOG.md  CHECKPOINT-COMMUNE-PLAN.md  CI-ACCEPTANCE-PLAN.md  CLAUDE.md  CONTEXT.md  CPLUGS-PREP-PLAN.md  DIGEST-FETCHER-PLAN.md  HANDOFF.md  MANIFEST-PARITY-PLAN.md  MDBOOK-PLAN.md  PARITY-PUBLISH-PLAN.md  PEROS-PLAN.md  PEROS-RERELEASE-PLAN.md  PREP4-PLAN.md  README.md  SCOPE.md  SESSIONSTART-BRIEF-PLAN.md  SETUP-SLICE-PLAN.md  SKELETON-PLAN.md  SKILLS-SLICE-PLAN.md  SPT_HARNESS_ADAPTER_TIPS.md  UNIFY-CONSOLIDATE-PLAN.md  UPDATE-NAMING-DOYLE-ASKS.md  V09-PLAN.md  V13-ADAPTER-PLAN.md  traceable-reqs.toml
adapter/: claude-spt.toml  manifest.schema.json
adapter/strings/briefs/: identity.md  live-ops.md  messaging-no-perch.md  messaging-perch.md
adapter/strings/skills/: commune.md  force-stop.md  list-agents.md  live.md  ready.md  send.md  setup.md  signoff.md  subnet.md  version.md  whoami.md
ci/: install-hooks.sh  run-gates.sh
ci/acceptance/: lib.sh  run-acceptance.sh
ci/digest/: build.sh  digest-proof-int.sh  sample.jsonl
ci/docs/: check-docs.sh  gen-llms.sh
ci/git-hooks/: pre-push
ci/hooks/: poll-int.sh
ci/idle-translate/: build.sh  translate-proof-int.sh
ci/launcher/: bind-int.sh
ci/lib/: spt-bus.sh
ci/manifest/: check-manifest.sh  registration-int.sh  validate_manifest.py
ci/psyche/: build.sh  live-relay-int.sh
ci/psyche-download/: psyche-download-int.sh
ci/publish/: package-adapter.sh  package-skeleton.sh  release-acquire-int.sh  validate-skeleton.sh
ci/setup/: activate-int.sh
ci/subnet/: multi-subnet-bringup-int.sh
docs/: CI.md  DOCS-STRATEGY.md  KNOWN-HAZARDS.md  PARITY.md  RELEASE-RUNBOOK.md  SKILL-AUTHORING.md  SPT-CORE-FINDINGS.md  TRACEABILITY.md
docs-site/: README.md  book.toml  llms.txt
docs-site/src/: SUMMARY.md  introduction.md  quickstart.md
docs-site/src/reference/: harness-contract.md
docs-site/theme/: theme.css
docs/adr/: 0000-template.md  0001-distribution-splits-by-volatility.md  0002-hook-wiring-hand-written-hooks-json-shells-spt-api.md  0003-psyche-is-a-constrained-auto-approving-companion.md  0004-checkpoint-via-self-send-loopback.md  0005-name-unification.md  0006-one-command-update-and-consolidated-binary.md
docs/formats/: adr-format.md  context-format.md
plugin/sptc/.claude/: LIVE_AGENT_IDS.json
plugin/sptc/.claude-plugin/: plugin.json
plugin/sptc/hooks/: _common.sh  pre-tool-use.sh  session-start.sh  user-prompt-submit.sh
plugin/sptc/skills/commune/: SKILL.md
plugin/sptc/skills/force-stop/: SKILL.md
plugin/sptc/skills/list-agents/: SKILL.md
plugin/sptc/skills/live/: SKILL.md
plugin/sptc/skills/new-alarm/: SKILL.md
plugin/sptc/skills/ready/: SKILL.md
plugin/sptc/skills/send/: SKILL.md
plugin/sptc/skills/setup/: SKILL.md
plugin/sptc/skills/signoff/: SKILL.md
plugin/sptc/skills/version/: SKILL.md
plugin/sptc/skills/whoami/: SKILL.md
tests/: acceptance-harness.sh  adapter-archive.sh  ci-gates.sh  docs-gen.sh  hooks-dispatch.sh  hooks-parse.sh  manifest-schema.sh  manifest-shortcut.sh  msys-hazard.sh  skeleton-validate.sh
tools/cc-spt-idle-translate/: Cargo.toml
tools/cc-spt-idle-translate/src/: main.rs
tools/claude-spt/: Cargo.toml
tools/claude-spt-digest/: Cargo.toml
tools/claude-spt-digest/src/: main.rs
tools/claude-spt-psyche/: Cargo.toml
tools/claude-spt-psyche/src/: main.rs
tools/claude-spt/src/: digest.rs  hook.rs  launch.rs  main.rs  post_update.rs  psyche.rs  translate.rs
